[gd_scene load_steps=42 format=3 uid="uid://d26jid11t8c1n"]

[ext_resource type="Texture2D" uid="uid://8xlwfq1g5m3m" path="res://barkley2/assets/b2_original/images/merged/s_door_tech02.png" id="1_cgf0i"]
[ext_resource type="Script" path="res://barkley2/scenes/Objects/_doors/o_door_tech_02.gd" id="2_26ypu"]
[ext_resource type="Theme" uid="uid://dgl808q5lpydb" path="res://barkley2/themes/main.tres" id="3_fn5my"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ktn6"]
atlas = ExtResource("1_cgf0i")
region = Rect2(768, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6nv5"]
atlas = ExtResource("1_cgf0i")
region = Rect2(720, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr2l2"]
atlas = ExtResource("1_cgf0i")
region = Rect2(672, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_omntu"]
atlas = ExtResource("1_cgf0i")
region = Rect2(624, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj6ru"]
atlas = ExtResource("1_cgf0i")
region = Rect2(576, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdws1"]
atlas = ExtResource("1_cgf0i")
region = Rect2(528, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5npcc"]
atlas = ExtResource("1_cgf0i")
region = Rect2(480, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1elq"]
atlas = ExtResource("1_cgf0i")
region = Rect2(432, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_foxe4"]
atlas = ExtResource("1_cgf0i")
region = Rect2(384, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_si8s1"]
atlas = ExtResource("1_cgf0i")
region = Rect2(336, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcvsn"]
atlas = ExtResource("1_cgf0i")
region = Rect2(288, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o51de"]
atlas = ExtResource("1_cgf0i")
region = Rect2(240, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydid4"]
atlas = ExtResource("1_cgf0i")
region = Rect2(192, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e66c"]
atlas = ExtResource("1_cgf0i")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h2qk"]
atlas = ExtResource("1_cgf0i")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tga1"]
atlas = ExtResource("1_cgf0i")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7voee"]
atlas = ExtResource("1_cgf0i")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_44ni1"]
atlas = ExtResource("1_cgf0i")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxwyv"]
atlas = ExtResource("1_cgf0i")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpl4g"]
atlas = ExtResource("1_cgf0i")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2xk8"]
atlas = ExtResource("1_cgf0i")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y2v8"]
atlas = ExtResource("1_cgf0i")
region = Rect2(192, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyhlw"]
atlas = ExtResource("1_cgf0i")
region = Rect2(240, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5gsi"]
atlas = ExtResource("1_cgf0i")
region = Rect2(288, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rqek"]
atlas = ExtResource("1_cgf0i")
region = Rect2(336, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yu3g7"]
atlas = ExtResource("1_cgf0i")
region = Rect2(384, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai2it"]
atlas = ExtResource("1_cgf0i")
region = Rect2(432, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lq87"]
atlas = ExtResource("1_cgf0i")
region = Rect2(480, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nidt"]
atlas = ExtResource("1_cgf0i")
region = Rect2(528, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l02rt"]
atlas = ExtResource("1_cgf0i")
region = Rect2(576, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k35co"]
atlas = ExtResource("1_cgf0i")
region = Rect2(624, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_72krj"]
atlas = ExtResource("1_cgf0i")
region = Rect2(672, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eqmf"]
atlas = ExtResource("1_cgf0i")
region = Rect2(720, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7buym"]
atlas = ExtResource("1_cgf0i")
region = Rect2(768, 0, 48, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_m0nwl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ktn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6nv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr2l2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omntu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj6ru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdws1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5npcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1elq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_foxe4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si8s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcvsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o51de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydid4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e66c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h2qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tga1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7voee")
}],
"loop": false,
"name": &"door_close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_44ni1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxwyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpl4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2xk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y2v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyhlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5gsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rqek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yu3g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai2it")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lq87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nidt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l02rt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k35co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72krj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eqmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7buym")
}],
"loop": false,
"name": &"door_open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1dp3k"]
size = Vector2(49, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_at0fl"]
size = Vector2(80, 45)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4q0mk"]
bg_color = Color(0, 0, 0, 0.5)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[node name="o_door_tech02" type="AnimatedSprite2D" node_paths=PackedStringArray("door_block", "door_sensor", "sound_emiter")]
z_index = -5
sprite_frames = SubResource("SpriteFrames_m0nwl")
animation = &"door_open"
centered = false
offset = Vector2(0, -63)
script = ExtResource("2_26ypu")
door_block = NodePath("door_block")
door_sensor = NodePath("door_sensor")
sound_emiter = NodePath("AudioStreamPlayer2D")
sfx_open = "door_open_tech"
sfx_close = "door_close_tech"

[node name="door_block" type="StaticBody2D" parent="."]

[node name="block_shape" type="CollisionShape2D" parent="door_block"]
position = Vector2(24.5, -9.5)
shape = SubResource("RectangleShape2D_1dp3k")

[node name="door_sensor" type="Area2D" parent="."]

[node name="sensor_shape" type="CollisionShape2D" parent="door_sensor"]
position = Vector2(24.5, -9.5)
shape = SubResource("RectangleShape2D_at0fl")

[node name="locked_panel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(72, 16)
offset_left = -12.0
offset_top = -36.0
offset_right = 60.0
offset_bottom = -20.0
theme = ExtResource("3_fn5my")
theme_override_styles/panel = SubResource("StyleBoxFlat_4q0mk")

[node name="MarginContainer" type="MarginContainer" parent="locked_panel"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="locked_text" type="Label" parent="locked_panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Locked"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
